# waper

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  sqlx_schema.sqlite
scripts/: start_fake_server.sh
sqls/: INIT.sql
src/: cli.rs  config.rs  db.rs  log.rs  main.rs  orchestrator.rs  prelude.rs  scraper.rs
src/cli/: args.rs  repl.rs
tests/: fake_server.rs
