[package]
name = "waper"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to scrape HTML websites"
license = "MIT"
repository = "https://github.com/nkitsaini/waper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
http = "0.2.9"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
patricia_tree = "0.5.7"
radix_trie = "0.2.1"
regex = "1.8.1"
reqwest = "0.11.17"
select = "0.6.0"
tokio = { version = "1.28.0", features = ["sync", "tokio-macros", "full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
trie-rs = "0.1.1"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "sqlite" ] }
clap_complete = "4.2.1"


[profile.dev.package.sqlx-macros]
opt-level = 3
